@@ -1,13 +1,8 @@
 package net.loveruby.cflat.ast;
-import net.loveruby.cflat.asm.Label;
 
 public class BreakNode extends StmtNode {
     public BreakNode(Location loc) {
         super(loc);
-    }
-
-    public Location location() {
-        return location;
     }
 
     protected void _dump(Dumper d) {
