@@ -1,3 +1,8 @@
+Sun Aug 31 23:59:36 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast/*.java: remove unused reference to
+	  asm.Label.
+
 Mon Apr 27 02:55:41 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/entity: new package.
